# learn-opengl

./: .gitignore  CMakeLists.txt  Makefile  build.sh
include/glad/: glad.h
libs/glad/src/: glad.c
old/shaders/: 3.3.shader.fs
old/src/: triangle-ex3.cpp  triangle.cpp  window.cpp
shaders/: color-diff.fs  color-specular.fs  color-specular.vs  color2.fs  container.fs  cube.fs  ex3-shader.fs  lc2.fs  lmap-att.fs  lmap-emissive.vs  lmap-inv.fs  material.fs  offset.vs  reflexion.vs  rotation.vs  tilted.vs  two.fs
src/: camera-class.cpp  camera-move.cpp  camera-spin.cpp  color-ambient.cpp  color-diffusive.cpp  color-specular-moving.cpp  color-specular.cpp  color.cpp  container.cpp  cube.cpp  fov.cpp  lmap-att.cpp  lmap-col.cpp  lmap-directional.cpp  lmap-emissive.cpp  lmap-flash.cpp  lmap-inv.cpp  lmap.cpp  material-colors.cpp  material.cpp  rotation.cpp  tilted.cpp  triangle-color.cpp  triangle-ex2.cpp  triangle-gradient.cpp  triangle-green.cpp  triangle-offset.cpp  triangle-upsidedown.cpp  triangle.cpp  two-textures.cpp
src/learnopengl/: camera.h  shader_s.h
